--- a/greenmtnmovers/app/globals.css
+++ b/greenmtnmovers/app/globals.css
@@ -1242,7 +1242,9 @@ html {
 
   width: 100%;
   height: 100px;
-  background: #f7f7f7;
+  background-color: white;
+  min-width: 1000px;
+  overflow-x: hidden;
   z-index: 2;
 }
 
