--- a/app/globals.css
+++ b/app/globals.css
@@ -243,27 +243,7 @@ html {
   }
 }
 
-.cardContainer .cardsAccent {
-  background: rgba(14, 89, 51, 0.6);
-  height: 75px;
-  width: 75px;
-  border-radius: 50%;
-  position: absolute;
-  left: 5%;
-  transition: 0.5s ease-in-out;
-}
-
-.card-container .cardsAccent {
-  background: rgba(14, 89, 51, 0.6);
-  height: 75px;
-  width: 75px;
-  border-radius: 50%;
-  position: absolute;
-  left: 5%;
-  transition: 0.5s ease-in-out;
-}
-
-.services-card-container .cardsAccent {
+.cardsAccent {
   background: rgba(14, 89, 51, 0.6);
   height: 75px;
   width: 75px;
